--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
   <!-- Top section -->
   <header>
+    <div class="row">
     <img class="profile-image" src="images/profile.jpg" alt="A picture of me.">
     <h1>Anja Subasic</h1>
     <h2>developer / percussionist</h2>
@@ -24,6 +25,7 @@
       <li><a class="btn btn-start animated fadeInUpBig" data-toggle="tab" data-scroll="" href="#experience">Experience</a></li>
       <li><a class="btn btn-start animated fadeInUpBig" data-toggle="tab" -scroll="" href="#contact">Contact</a></li>
     </ul>
+  </div>
   </header>
 
   <!-- Main Content -->
