--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 
               <ul>
                 <li>Object-Oriented Programming</li>
-                <li>Data Structures, iOS Development (Swift)</li>
+                <li>Data Structures</li>
+                <li>iOS Development (Swift)</li>
                 <li>Database Administration</li>
                 <li>UNIX System Administration</li>
                 <li>Information Systems</li>
