Updated Experience and About Me, added link to GitHub and removed Twitter

--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
           <section id="aboutMe" class="tab-pane fade in active">
             <h2>About Me</h2>
 
-            <p>My name is Anja (pronounced AHN-yuh) and I am originally from Belgrade, Serbia. I currently live in Joplin, MO, where I just graduated with a
-              <span class="text-highlight">B.S. in Computer Science and a B.A. in Music Performance/Percussion.</span> I currently work as a C# developer in
-              the Joplin area, but I am enrolled in the <span class="text-highlight">CS M.S.</span> program at Dartmouth for <span class="text-highlight">Fall 2017</span>
-              and I will be moving to Hanover on September 1, which I am very excited about!</p>
+            <p>My name is Anja (pronounced AHN-yuh) and I am originally from Belgrade, Serbia. I currently live in Hanover, NH, where I am pursuing an
+              <span class="text-highlight">M.S. in Computer Science.</span> at <span class="text-highlight">Dartmouth College.</span> Prior to coming to Dartmouth,
+              I lived in Joplin, MO, where I got my undergraduate degrees in <span class="text-highlight">Computer Science and Music Performance/Percussion</span>.</p>
 
               <p>I enjoy running, travelling, good food and coffee, playing classical and jazz music and learning new stuff :)</p>
 
@@ -52,17 +51,21 @@
             <section id="experience" class="tab-pane fade">
               <h2>Experience</h2>
 
-              <p>I currently work at Leggett & Platt Inc. as a C# developer. I started here as an intern at the beginning of my senior year, in September 2016, and was hired as a full-time developer a month or so later. I work on ETL applications written in C#, large databases, and improving the new Enterprise Resource Planning system the company just converted to - Microsoft Dynamics AX. Although big corporations aren’t really my cup of tea, I was surprised to find myself enjoying development for such a large number of users and the challenges that come with it, as well as working with big data.</p>
+              <p>I currently work as a research assistant for professor V.S. Subrahmanian at Dartmouth College. The project I am currently working on attempts to predict influence of membership and relationship changes in a terrorist network, and how knowledge about those patterns can be further used to destabilize a terrorist network. </p>
 
-              <p>Before Leggett & Platt, I interned at a local software development company, PILR Tech, for about a year, where I gained a lot of my C# knowledge and some experience with web development. I spent most of my time there working on a Windows Store application and going through C# training. I also worked independently on a simple website for a company initiative that supports women in tech.</p>
+              <p>Prior to this position, I worked at Leggett & Platt Inc. in Carthage, MO, as a C# software engineer. I started as an intern at the beginning of my senior year of college, in September 2016, and was hired as a full-time developer a month or so later. I accepted the position and went on to work as full-time engineer, while still finishing my senior year of college and working on coursework and my undergraduate thesis. At Leggett & Platt, I worked on ETL applications written in C#, large databases, and improving the new Enterprise Resource Planning system the company had just converted to - Microsoft Dynamics AX. Although big manufacturing corporations aren’t really my cup of tea, I was surprised to find myself enjoying development for such a large number of users and the challenges that come with it, as well as working with big data.</p>
+
+              <p>Before Leggett & Platt, I interned at a local Joplin software development company, PILR Tech, for about a year, where I gained a lot of my C# knowledge and some experience with web development. I spent most of my time there working on a Windows Store application and going through OOP training. I also worked independently on a simple website for a company initiative that has an objective to incorporate programming courses into the local high school and middle school curriculum, and get more kids who do not come from a technical background to try and enjoy coding.</p>
 
               <p>Some of the relevant classes I have taken so far include:</p>
 
               <ul>
+                <li>Smartphone Programming (Android)</li>
+                <li>Database Systems</li>
+                <li>Machine Learning Research</li>
+                <li>iOS Development (Swift)</li>
                 <li>Object-Oriented Programming</li>
                 <li>Data Structures</li>
-                <li>iOS Development (Swift)</li>
-                <li>Database Administration</li>
                 <li>UNIX System Administration</li>
                 <li>Information Systems</li>
                 <li>Computer Networks</li>
@@ -71,7 +74,7 @@
               </ul>
 
               <p>
-                In the future, I would like to move away from Windows development and gain experience in mobile app development, and web and other technologies. I applied to DALI because it seems like a perfect place for me to build my front-end chops, keep programming, and meet fellow developers at Dartmouth. :)
+                In the future, I would like to gain more experience in machine learning, and fully utilize working for one of the leading experts in the field. The research I have done so far has been very rewarding and I would like to continue doing similar work in the future. I am, however, still more interested in working in the industry than academia, which is why I am pursuing an M.S. degree with research rather than a PhD. I'm currently looking for an internship for Summer 2018, after which I will be available for a full-time position, as I am planning to graduate in March 2019.
               </p>
 
               <a class="resume-link" data-toggle="collapse" data-target=".navbar-collapse" href="/Subasic_Anja_Resume.pdf" download>
@@ -83,7 +86,7 @@
             <section id="contact" class="tab-pane fade">
               <h2>Contact</h2>
 
-              <p>Contact me at <span style="color: darkcyan">(417) 629-7353</span> or through email, Facebook, LinkedIn, or Twitter.</p>
+              <p>Contact me at <span style="color: darkcyan">(417) 629-7353</span> or through email, Facebook, LinkedIn, or GitHub.</p>
               <ul class="list-inline social-buttons">
                 <li>
                   <a data-toggle="collapse" data-target=".navbar-collapse" href="mailto:anja.subasic@gmail.com">
@@ -91,8 +94,8 @@
                   </a>
                 </li>
                 <li>
-                  <a data-toggle="collapse" data-target=".navbar-collapse" href="https://twitter.com/AnjaSubasic" target="_blank">
-                    <i class="fa fa-twitter" ></i>
+                  <a data-toggle="collapse" data-target=".navbar-collapse" href="https://github.com/anjasubasic" target="_blank">
+                    <i class="fa fa-github" ></i>
                   </a>
                 </li>
                 <li>
