--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             <h2>About Me</h2>
 
             <p>My name is Anja (pronounced AHN-yuh) and I am originally from Belgrade, Serbia. I currently live in Hanover, NH, where I am pursuing an
-              <span class="text-highlight">M.S. in Computer Science.</span> at <span class="text-highlight">Dartmouth College.</span> Prior to coming to Dartmouth,
+              <span class="text-highlight">M.S. in Computer Science</span> at <span class="text-highlight">Dartmouth College.</span> Prior to coming to Dartmouth,
               I lived in Joplin, MO, where I got my undergraduate degrees in <span class="text-highlight">Computer Science and Music Performance/Percussion</span>.</p>
 
-              <p>I enjoy running, travelling, good food and coffee, playing classical and jazz music and learning new stuff :)</p>
+              <p>I enjoy running, alpine skiing, travelling, good food and coffee, playing classical and jazz music and learning new stuff :)</p>
 
               <img src="images/belgrade.jpg" alt="Belgrade">
               <img src="images/vibes.jpg" alt="Anja playing the vibes">
@@ -51,7 +51,7 @@
             <section id="experience" class="tab-pane fade">
               <h2>Experience</h2>
 
-              <p>I currently work as a research assistant for professor V.S. Subrahmanian at Dartmouth College. The project I am currently working on attempts to predict influence of membership and relationship changes in a terrorist network, and how knowledge about those patterns can be further used to destabilize a terrorist network. </p>
+              <p>I currently work as a research assistant for professor V.S. Subrahmanian at Dartmouth College. Projects I am currently working on attempt to predict influence of membership and relationship changes in a terrorist network, and how knowledge about those patterns can be further used to destabilize a terrorist network, as well as relationships between factions within these organizations. </p>
 
               <p>Prior to this position, I worked at Leggett & Platt Inc. in Carthage, MO, as a C# software engineer. I started as an intern at the beginning of my senior year of college, in September 2016, and was hired as a full-time developer a month or so later. I accepted the position and went on to work as full-time engineer, while still finishing my senior year of college and working on coursework and my undergraduate thesis. At Leggett & Platt, I worked on ETL applications written in C#, large databases, and improving the new Enterprise Resource Planning system the company had just converted to - Microsoft Dynamics AX. Although big manufacturing corporations aren’t really my cup of tea, I was surprised to find myself enjoying development for such a large number of users and the challenges that come with it, as well as working with big data.</p>
 
@@ -60,6 +60,8 @@
               <p>Some of the relevant classes I have taken so far include:</p>
 
               <ul>
+              	<li>Cognitive Computing with IBM Watson</li>
+              	<li>Bioinformatics</li>
                 <li>Smartphone Programming (Android)</li>
                 <li>Database Systems</li>
                 <li>Machine Learning Research</li>
@@ -69,12 +71,11 @@
                 <li>UNIX System Administration</li>
                 <li>Information Systems</li>
                 <li>Computer Networks</li>
-                <li>Operating Systems</li>
-                <li>IT Project Management</li>
+                <li>Project Management</li>
               </ul>
 
               <p>
-                In the future, I would like to gain more experience in machine learning, and fully utilize working for one of the leading experts in the field. The research I have done so far has been very rewarding and I would like to continue doing similar work in the future. I am, however, still more interested in working in the industry than academia, which is why I am pursuing an M.S. degree with research rather than a PhD. I'm currently looking for an internship for Summer 2018, after which I will be available for a full-time position, as I am planning to graduate in March 2019.
+                In the future, I would like to gain more experience in machine learning, and fully utilize working for one of the leading experts in the field while I am at Dartmouth. The research I have done so far has been very rewarding and I would like to continue doing similar work in the future. I am, however, still more interested in working in the industry than academia, which is why I am pursuing an M.S. degree with research rather than a PhD. I'm currently looking for an internship for Summer 2018, after which I will be available for a full-time position, starting in April 2019.
               </p>
 
               <a class="resume-link" data-toggle="collapse" data-target=".navbar-collapse" href="/Subasic_Anja_Resume.pdf" download>
@@ -116,7 +117,7 @@
       </div><!-- /.row -->
     </div><!-- /.container -->
     <footer>
-      <h6>© 2017 Anja Subasic | anja.subasic@gmail.com</h6>
+      <h6>© 2018 Anja Subasic | anja.subasic@gmail.com</h6>
     </footer>
 
     <!-- Page scripts -->
